# mdTool

./: .gitignore  README.md  findings.md  index.html  package-lock.json  package.json  playwright.config.ts  progress.md  task_plan.md  tsconfig.json  version.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-tauri.ps1  publish-release.mjs  run-e2e.ps1  validate-release.mjs
src/: App.vue  shims.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MarkdownEditor.vue  MarkdownPreview.vue  RepairPanel.vue
src/core/: scanner.ts  sections.ts  textEdits.ts
src/repair/: planner.ts  registry.ts  settings.ts
src/rules/: diagnostics.ts  formula.ts  spacing.ts
src/services/: nativeFiles.ts  updater.ts
src/stores/: document.ts
tests/: core.test.ts  release-validation.test.mjs  updater.test.ts
tests/e2e/: app.spec.ts
